Updated API documentation and UI improvements

--- a/docs/api/Asset/v1.1.md
+++ b/docs/api/Asset/v1.1.md
@@ -1,24 +1,16 @@
-# Xemelgo Asset Route API Documentation
+---
+title: ""
+pagination_next: null
+pagination_prev: null
+---
 
-## Version 1.1 — August 2024
+<h1 style={{ color: '#004FDB' }}>Asset Route API</h1>
 
-© 2024 Xemelgo, Inc.  
-1-888-907-2884  
-[www.xemelgo.com](https://www.xemelgo.com)  
-support@xemelgo.com  
+<h2>Version 1.1 — August 2024</h2>
 
 ---
 
-## Table of Contents
-
-1. [Release Versions](#release-versions)
-2. [Authentication - Login API](#authentication---login-api)
-3. [Get Asset Route API](#get-asset-route-api)
-4. [Errors](#errors)
-
----
-
-## Release Versions
+## <span style={{ color: '#004FDB' }}>Release Versions</span>
 
 | Version | Description            | Author          | Release Date |
 |---------|------------------------|----------------|--------------|
@@ -26,7 +18,7 @@ support@xemelgo.com
 
 ---
 
-## Authentication - Login API
+## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
 
 To access the GraphQL APIs, users must first authenticate using the Xemelgo Login REST API.
 
@@ -57,7 +49,7 @@ Use the `IdToken` as the authorization header for all API requests.
 
 ---
 
-## Get Asset Route API
+## <span style={{ color: '#004FDB' }}>Get Asset Route API</span>
 
 The Get Asset Route API retrieves asset details and status updates.
 
@@ -118,7 +110,7 @@ query assetRoute($id: String!, $startDate: AWSTimestamp, $endDate: AWSTimestamp)
 
 ---
 
-## Errors
+## <span style={{ color: '#004FDB' }}>Errors</span>
 
 | Error                   | Code | Description         |
 |-------------------------|------|---------------------|
