--- a/docs/api/Inventory/v1.1.md
+++ b/docs/api/Inventory/v1.1.md
@@ -1,27 +1,16 @@
-# Xemelgo Inventory API Documentation
+---
+title: ""
+pagination_next: null
+pagination_prev: null
+---
 
-## Version 1.6 — January 2025
+<h1 style={{ color: '#004FDB' }}>Inventory Management API</h1>
 
-© 2025 Xemelgo, Inc.  
-📧 support@xemelgo.com  
+<h2>Version 1.6 — January 2025</h2>
 
 ---
 
-## Table of Contents
-
-1. [Release Versions](#release-versions)
-2. [Authentication - Login API](#authentication---login-api)
-3. [Create Item Set API](#create-item-set-api)
-4. [Create Inventory Parts API](#create-inventory-parts-api)
-5. [Update Inventory Parts API](#update-inventory-parts-api)
-6. [Get Inventory Items API](#get-inventory-items-api)
-7. [List Inventory Parts Counts API](#list-inventory-parts-counts-api)
-8. [Cycle Count Event](#cycle-count-event)
-9. [Errors](#errors)
-
----
-
-## Release Versions
+## <span style={{ color: '#004FDB' }}>Release Versions</span>
 
 | Version | Description                             | Author           | Release Date |
 |---------|-----------------------------------------|------------------|--------------|
@@ -35,15 +24,15 @@
 
 ---
 
-## Authentication - Login API
+## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
 
 To access the GraphQL APIs, users must first authenticate using the Xemelgo Login REST API.
 
-### **Endpoint Details**
+### Endpoint Details
 - **URL:** `https://rest.api.xemelgo.com/login`
 - **Method:** `POST`
 
-### **Request Body**
+### Request Body
 ```json
 {
   "email": "base64_encoded_email",
@@ -51,7 +40,7 @@ To access the GraphQL APIs, users must first authenticate using the Xemelgo Logi
 }
 ```
 
-### **Response Body**
+### Response Body
 ```json
 {
   "AccessToken": "$accessToken",
@@ -66,13 +55,13 @@ Use the `$idToken` as the authorization header for all API requests.
 
 ---
 
-## Create Item Set API
+## <span style={{ color: '#004FDB' }}>Create Item Set API</span>
 
-### **Endpoint Details**
+### Endpoint Details
 - **URL:** `https://api.xemelgo.com/graphql`
 - **Method:** `POST`
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   createItemSet(
@@ -94,9 +83,9 @@ mutation {
 
 ---
 
-## Create Inventory Parts API
+## <span style={{ color: '#004FDB' }}>Create Inventory Parts API</span>
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   createInventoryParts(
@@ -119,9 +108,9 @@ mutation {
 
 ---
 
-## Update Inventory Parts API
+## <span style={{ color: '#004FDB' }}>Update Inventory Parts API</span>
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   updateInventoryParts(
@@ -141,9 +130,9 @@ mutation {
 
 ---
 
-## Get Inventory Items API
+## <span style={{ color: '#004FDB' }}>Get Inventory Items API</span>
 
-### **Request Body**
+### Request Body
 ```graphql
 query {
   inventory(input: { filter: null, nextToken: null }) {
@@ -162,9 +151,9 @@ query {
 
 ---
 
-## List Inventory Parts Counts API
+## <span style={{ color: '#004FDB' }}>List Inventory Parts Counts API</span>
 
-### **Request Body**
+### Request Body
 ```graphql
 query inventoryPartLocationMetrics ($filter: String, $nextToken: String) {
   inventoryPartLocationMetrics(input: {filter: $filter, nextToken: $nextToken}) {
@@ -181,11 +170,11 @@ query inventoryPartLocationMetrics ($filter: String, $nextToken: String) {
 
 ---
 
-## Cycle Count Event
+## <span style={{ color: '#004FDB' }}>Cycle Count Event</span>
 
 The cycle count event payload contains a list of SKUs and their on-hand and missing counts.
 
-### **Example Payload**
+### Example Payload
 ```json
 {
   "id": "bc87d998-7d57-426e-ab71-b359f3c367ab",
@@ -205,7 +194,7 @@ The cycle count event payload contains a list of SKUs and their on-hand and miss
 
 ---
 
-## Errors
+## <span style={{ color: '#004FDB' }}>Errors</span>
 
 | Error                  | Code | Description                     |
 |------------------------|------|---------------------------------|
