--- a/docs/api/Inventory/v1.4.md
+++ b/docs/api/Inventory/v1.4.md
@@ -1,25 +1,16 @@
-# Xemelgo Inventory API Documentation
+---
+title: ""
+pagination_next: null
+pagination_prev: null
+---
 
-## Version 1.4 — November 2024
+<h1 style={{ color: '#004FDB' }}>Inventory API</h1>
 
-© 2024 Xemelgo, Inc.  
-📧 support@xemelgo.com  
+<h2>Version 1.4 — November 2024</h2>
 
 ---
 
-## Table of Contents
-
-1. [Release Versions](#release-versions)
-2. [Authentication - Login API](#authentication---login-api)
-3. [Create Item Set API](#create-item-set-api)
-4. [Create Inventory Parts API](#create-inventory-parts-api)
-5. [Update Inventory Parts API](#update-inventory-parts-api)
-6. [Get Inventory Items API](#get-inventory-items-api)
-7. [Errors](#errors)
-
----
-
-## Release Versions
+## <span style={{ color: '#004FDB' }}>Release Versions</span>
 
 | Version | Description                            | Author           | Release Date |
 |---------|----------------------------------------|------------------|--------------|
@@ -31,15 +22,15 @@
 
 ---
 
-## Authentication - Login API
+## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
 
 To access the GraphQL APIs, users must first authenticate using the Xemelgo Login REST API.
 
-### **Endpoint Details**
+### Endpoint Details
 - **URL:** `https://rest.api.xemelgo.com/login`
 - **Method:** `POST`
 
-### **Request Body**
+### Request Body
 ```json
 {
   "email": "base64_encoded_email",
@@ -47,7 +38,7 @@ To access the GraphQL APIs, users must first authenticate using the Xemelgo Logi
 }
 ```
 
-### **Response Body**
+### Response Body
 ```json
 {
   "AccessToken": "$accessToken",
@@ -62,13 +53,13 @@ Use the `$idToken` as the authorization header for all API requests.
 
 ---
 
-## Create Item Set API
+## <span style={{ color: '#004FDB' }}>Create Item Set API</span>
 
-### **Endpoint Details**
+### Endpoint Details
 - **URL:** `https://api.xemelgo.com/graphql`
 - **Method:** `POST`
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   createItemSet(
@@ -90,9 +81,9 @@ mutation {
 
 ---
 
-## Create Inventory Parts API
+## <span style={{ color: '#004FDB' }}>Create Inventory Parts API</span>
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   createInventoryParts(
@@ -115,9 +106,9 @@ mutation {
 
 ---
 
-## Update Inventory Parts API
+## <span style={{ color: '#004FDB' }}>Update Inventory Parts API</span>
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   updateInventoryParts(
@@ -137,9 +128,9 @@ mutation {
 
 ---
 
-## Get Inventory Items API
+## <span style={{ color: '#004FDB' }}>Get Inventory Items API</span>
 
-### **Request Body**
+### Request Body
 ```graphql
 query {
   inventory(input: { filter: null, nextToken: null }) {
@@ -158,7 +149,7 @@ query {
 
 ---
 
-## Errors
+## <span style={{ color: '#004FDB' }}>Errors</span>
 
 | Error                  | Code | Description                     |
 |------------------------|------|---------------------------------|
