--- a/docs/api/Asset/v1.3.md
+++ b/docs/api/Asset/v1.3.md
@@ -1,24 +1,16 @@
-# Xemelgo Create Item Set API Documentation
+---
+title: ""
+pagination_next: null
+pagination_prev: null
+---
 
-## Version 1.3 — July 2024
+<h1 style={{ color: '#004FDB' }}>Create Item Set API</h1>
 
-© 2024 Xemelgo, Inc.  
-📧 support@xemelgo.com  
+<h2>Version 1.3 — July 2024</h2>
 
 ---
 
-## Table of Contents
-
-1. [Release Versions](#release-versions)
-2. [Authentication - Login API](#authentication---login-api)
-3. [Create Asset Type API](#create-asset-type-api)
-4. [Create Item Set API](#create-item-set-api)
-5. [Update Asset API](#update-asset-api)
-6. [Errors](#errors)
-
----
-
-## Release Versions
+## <span style={{ color: '#004FDB' }}>Release Versions</span>
 
 | Version | Description               | Author           | Release Date |
 |---------|---------------------------|------------------|--------------|
@@ -29,15 +21,15 @@
 
 ---
 
-## Authentication - Login API
+## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
 
 To access the GraphQL APIs, users must first authenticate using the Xemelgo Login REST API.
 
-### **Endpoint Details**
+### Endpoint Details
 - **URL:** `https://rest.api.xemelgo.com/login`
 - **Method:** `POST`
 
-### **Request Body**
+### Request Body
 ```json
 {
   "email": "{{email}}",
@@ -45,7 +37,7 @@ To access the GraphQL APIs, users must first authenticate using the Xemelgo Logi
 }
 ```
 
-### **Response Body**
+### Response Body
 ```json
 {
   "AccessToken": "$accessToken",
@@ -60,20 +52,20 @@ Use the `$idToken` as the authorization header for all API requests.
 
 ---
 
-## Create Asset Type API
+## <span style={{ color: '#004FDB' }}>Create Asset Type API</span>
 
 Allows creating asset types that will be used when creating assets.
 
-### **Endpoint Details**
+### Endpoint Details
 - **URL:** `https://api.xemelgo.com/graphql`
 - **Method:** `POST`
 
-### **Request Headers**
+### Request Headers
 ```http
 Authorization: Bearer {IdToken}
 ```
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   createAssetTypes(
@@ -94,7 +86,7 @@ mutation {
 }
 ```
 
-### **Example Response**
+### Example Response
 ```json
 {
   "data": {
@@ -107,22 +99,22 @@ mutation {
 
 ---
 
-## Create Item Set API
+## <span style={{ color: '#004FDB' }}>Create Item Set API</span>
 
 Allows creating multiple assets at the same time for different asset types and associating them with RFID tracker serial numbers.
 
 **Note:** The asset type must be created prior to creating assets.
 
-### **Endpoint Details**
+### Endpoint Details
 - **URL:** `https://api.xemelgo.com/graphql`
 - **Method:** `POST`
 
-### **Request Headers**
+### Request Headers
 ```http
 Authorization: Bearer {IdToken}
 ```
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   createItemSet(
@@ -140,7 +132,7 @@ mutation {
 }
 ```
 
-### **Example Response**
+### Example Response
 ```json
 {
   "data": {
@@ -153,11 +145,11 @@ mutation {
 
 ---
 
-## Update Asset API
+## <span style={{ color: '#004FDB' }}>Update Asset API</span>
 
 Allows updating multiple asset properties simultaneously, including the tag associated with the asset or its asset type.
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   updateAssets(
@@ -183,7 +175,7 @@ mutation {
 }
 ```
 
-### **Example Response**
+### Example Response
 ```json
 {
   "data": {
@@ -203,7 +195,7 @@ mutation {
 
 ---
 
-## Errors
+## <span style={{ color: '#004FDB' }}>Errors</span>
 
 | Error                   | Code | Description         |
 |-------------------------|------|---------------------|
@@ -212,7 +204,7 @@ mutation {
 | Missing Auth Header    | 401  | Unauthorized       |
 | Assets not found       | 200  | Resource not found |
 
-#### **Error Responses**
+#### Error Responses
 ```json
 {
   "errors": [
