--- a/docs/api/Work-In-Process/v1.1.md
+++ b/docs/api/Work-In-Process/v1.1.md
@@ -1,24 +1,16 @@
-# Xemelgo Work Orders API Documentation
+---
+title: ""
+pagination_next: null
+pagination_prev: null
+---
 
-## Version 1.3 — February 2024
+<h1 style={{ color: '#004FDB' }}>Work Orders API</h1>
 
-© 2024 Xemelgo, Inc.  
-📧 support@xemelgo.com  
+<h2>Version 1.3 — February 2024</h2>
 
 ---
 
-## Table of Contents
-
-1. [Release Versions](#release-versions)
-2. [Authentication - Login API](#authentication---login-api)
-3. [Create Work Order Set API](#create-work-order-set-api)
-4. [Update Work Order Properties API](#update-work-order-properties-api)
-5. [Attach Work Order Tracker API](#attach-work-order-tracker-api)
-6. [Errors](#errors)
-
----
-
-## Release Versions
+## <span style={{ color: '#004FDB' }}>Release Versions</span>
 
 | Version | Description                      | Author          | Release Date |
 |---------|----------------------------------|----------------|--------------|
@@ -29,15 +21,15 @@
 
 ---
 
-## Authentication - Login API
+## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
 
 To access the GraphQL APIs, users must first authenticate using the Xemelgo Login REST API.
 
-### **Endpoint Details**
+### Endpoint Details
 - **URL:** `https://rest.api.xemelgo.com/login`
 - **Method:** `POST`
 
-### **Request Body**
+### Request Body
 ```json
 {
   "email": "base64_encoded_email",
@@ -45,7 +37,7 @@ To access the GraphQL APIs, users must first authenticate using the Xemelgo Logi
 }
 ```
 
-### **Response Body**
+### Response Body
 ```json
 {
   "AccessToken": "$accessToken",
@@ -60,15 +52,15 @@ Use the `$idToken` as the authorization header for all API requests.
 
 ---
 
-## Create Work Order Set API
+## <span style={{ color: '#004FDB' }}>Create Work Order Set API</span>
 
 Creates multiple work orders and associates them with RFID tracker serial numbers.
 
-### **Endpoint Details**
+### Endpoint Details
 - **URL:** `https://api.xemelgo.com/graphql`
 - **Method:** `POST`
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   createWorkOrderSet(
@@ -89,7 +81,7 @@ mutation {
 }
 ```
 
-### **Example Response**
+### Example Response
 ```json
 {
   "data": {
@@ -102,11 +94,11 @@ mutation {
 
 ---
 
-## Update Work Order Properties API
+## <span style={{ color: '#004FDB' }}>Update Work Order Properties API</span>
 
 Allows bulk updates of work order properties such as status, due dates, and priority.
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   updateWorkOrderProperties(
@@ -133,7 +125,7 @@ mutation {
 }
 ```
 
-### **Example Response**
+### Example Response
 ```json
 {
   "data": {
@@ -154,11 +146,11 @@ mutation {
 
 ---
 
-## Attach Work Order Tracker API
+## <span style={{ color: '#004FDB' }}>Attach Work Order Tracker API</span>
 
 Associates an RFID tracker serial number with a work order.
 
-### **Request Body**
+### Request Body
 ```graphql
 mutation {
   attachWorkOrderTracker(
@@ -175,7 +167,7 @@ mutation {
 }
 ```
 
-### **Example Response**
+### Example Response
 ```json
 {
   "data": {
@@ -189,7 +181,7 @@ mutation {
 
 ---
 
-## Errors
+## <span style={{ color: '#004FDB' }}>Errors</span>
 
 | Error                   | Code | Description         |
 |-------------------------|------|---------------------|
@@ -199,8 +191,8 @@ mutation {
 | Work Order Not Found   | 200  | Resource not found |
 | Duplicate Tracker Serial | 400  | Tracker serial already exists |
 
-### **Example Error Responses**
-#### **Expired Token:**
+### Example Error Responses
+#### Expired Token:
 ```json
 {
   "errors": [
@@ -212,7 +204,7 @@ mutation {
 }
 ```
 
-#### **Invalid Token:**
+#### Invalid Token:
 ```json
 {
   "errors": [
@@ -224,7 +216,7 @@ mutation {
 }
 ```
 
-#### **Missing Authorization Header:**
+#### Missing Authorization Header:
 ```json
 {
   "errors": [
