--- a/docs/api/Inventory/v1.1.md
+++ b/docs/api/Inventory/v1.1.md
@@ -83,7 +83,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Create Inventory Parts API</span>
+## <span style={{ color: '#004FDB' }}>Create Inventory Item Types API</span>
 
 ### Request Body
 ```graphql
@@ -108,7 +108,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Update Inventory Parts API</span>
+## <span style={{ color: '#004FDB' }}>Update Inventory Item Types API</span>
 
 ### Request Body
 ```graphql
@@ -151,7 +151,7 @@ query {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>List Inventory Parts Counts API</span>
+## <span style={{ color: '#004FDB' }}>List Inventory Item Type Counts API</span>
 
 ### Request Body
 ```graphql
@@ -194,15 +194,414 @@ The cycle count event payload contains a list of SKUs and their on-hand and miss
 
 ---
 
+## <span style={{ color: '#004FDB' }}>Upload CSV API</span>
+
+The Upload CSV API allows uploading CSV files to be processed by Xemelgo to:
+
+1. **Create and/or update Item Types**
+2. **Upload supplemental data**, such as Stock on Order for inventory tracking
+3. **Define stock threshold values** at different locations
+
+### Endpoint Details
+- **URL:** `https://api.xemelgo.com/graphql`
+- **Method:** `POST`
+
+### Request Properties
+
+| Property      | Type   | Description | Required |
+|--------------|--------|-------------|----------|
+| `fileContent`  | String | CSV file contents in JSON string format (including headers) | Yes |
+| `fileName`     | String | Name of the file to be created in Xemelgo (`.csv` filename) | Yes |
+| `filePath`     | String | Path for upload, e.g., `ItemTypeSync` | No |
+| `type`         | String | Type of upload: `ANY`, `STOCK_ON_ORDER`, `STOCK_THRESHOLD` | No, defaults to `ANY` |
+| `batchName`    | String | Group multiple file uploads under a batch name | Required for `STOCK_ON_ORDER` |
+
+### Required CSV Columns
+
+#### Stock Threshold
+| Header   | Value Description | Required |
+|----------|------------------|----------|
+| Item Type | Item Type ID | Yes |
+| Location | Xemelgo location name | Yes |
+| Min | Minimum stock level | No |
+| Optimal | Optimal stock level | No |
+
+#### Stock on Order
+| Header   | Value Description | Required |
+|----------|------------------|----------|
+| Item Type | Item Type ID | Yes |
+| Location | Xemelgo location name | Yes |
+| Stock on Order | Amount of stock on order | No |
+
+### Request Body Example (General Upload)
+```graphql
+mutation {
+  uploadCSV(
+    input: {
+      fileContent: "Number,Number,Number\n123,123,123\n3333,33123123,3311\n1333,123331,231233233",
+      fileName: "test-1.csv",
+      filePath: "ItemTypeSync"
+    }
+  ) {
+    result
+  }
+}
+```
+
+### Request Body Example (Stock Threshold Upload)
+```graphql
+mutation {
+  uploadCSV(
+    input: {
+      fileContent: "Item Type,Location,Min,Optimal\nWigs,Stock Room,10,50\n",
+      fileName: "StockRoom1_StockThreshold.csv",
+      type: STOCK_THRESHOLD
+    }
+  ) {
+    result
+  }
+}
+```
+
+### Request Body Example (Stock on Order Upload)
+```graphql
+mutation {
+  uploadCSV(
+    input: {
+      fileContent: "Location,Item Type,Stock On Order\nStockRoom1,Wigs,10\n",
+      fileName: "StockRoom1_StockOnOrder.csv",
+      type: STOCK_ON_ORDER,
+      batchName: "2024Dec11"
+    }
+  ) {
+    result
+  }
+}
+```
+
+### Response Body Example
+```json
+{
+  "data": {
+    "uploadCSV": {
+      "result": "File [test-1.csv] has been uploaded to Xemelgo"
+    }
+  }
+}
+```
+
+---
+
+## <span style={{ color: '#004FDB' }}>Inventory Management Postman Collection</span>
+
+```json
+{
+	"info": {
+		"_postman_id": "9ff7a270-cd8d-4387-b935-69242088b115",
+		"name": "Inventory Management Collection",
+		"schema": "https://schema.getpostman.com/json/collection/v2.1.0/collection.json",
+		"_exporter_id": "14257901"
+	},
+	"item": [
+		{
+			"name": "Login",
+			"event": [
+				{
+					"listen": "prerequest",
+					"script": {
+						"exec": [
+							"var emailId = \"base 64 encoded email\";",
+							"var pass = \"base 64 encoded password\";",
+							"",
+							"pm.environment.set(\"email\", btoa(emailId));",
+							"pm.environment.set(\"password\", btoa(pass));"
+						],
+						"type": "text/javascript",
+						"packages": {}
+					}
+				},
+				{
+					"listen": "test",
+					"script": {
+						"exec": [
+							"var jsonData = JSON.parse(responseBody);",
+							"pm.environment.set(\"token\", jsonData.IdToken);"
+						],
+						"type": "text/javascript",
+						"packages": {}
+					}
+				}
+			],
+			"request": {
+				"auth": {
+					"type": "noauth"
+				},
+				"method": "POST",
+				"header": [
+					{
+						"key": "scenario",
+						"value": "1",
+						"type": "text",
+						"disabled": true
+					}
+				],
+				"body": {
+					"mode": "raw",
+					"raw": "{\n    \"email\": \"{{email}}\",\n    \"password\": \"{{password}}\"\n}",
+					"options": {
+						"raw": {
+							"language": "json"
+						}
+					}
+				},
+				"url": {
+					"raw": "https://rest.api.xemelgo.com/login",
+					"protocol": "https",
+					"host": [
+						"rest",
+						"api",
+						"xemelgo",
+						"com"
+					],
+					"path": [
+						"login"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "Create Inventory part",
+			"request": {
+				"auth": {
+					"type": "noauth"
+				},
+				"method": "POST",
+				"header": [
+					{
+						"key": "Authorization",
+						"value": "{{token}}",
+						"type": "text"
+					}
+				],
+				"body": {
+					"mode": "graphql",
+					"graphql": {
+						"query": "mutation {\n    createInventoryParts(\n        input: {\n            inputList: [\n                {\n                    id : \"{{identifier}}\",\n                    description: \"{{Description}}\",\n                    customProperties: \"{\\\"sub_location_ts\\\": \\\"{{Bin}}\\\",\\\"customer_part_number_ts\\\": \\\"{{CPN}}\\\"}\"\n                }\n            ]\n        }\n    ) {\n        partIds\n    }\n}",
+						"variables": ""
+					}
+				},
+				"url": {
+					"raw": "https://api.xemelgo.com/graphql",
+					"protocol": "https",
+					"host": [
+						"api",
+						"xemelgo",
+						"com"
+					],
+					"path": [
+						"graphql"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "Update Inventory part",
+			"request": {
+				"auth": {
+					"type": "noauth"
+				},
+				"method": "POST",
+				"header": [
+					{
+						"key": "Authorization",
+						"value": "{{token}}",
+						"type": "text"
+					}
+				],
+				"body": {
+					"mode": "graphql",
+					"graphql": {
+						"query": "mutation {\n    updateInventoryParts(\n        input: {\n            inputList: [\n                {\n                    id : \"{{identifier}}\",\n                    customProperties: \"{\\\"bin_location_ts\\\": \\\"{{bin}}\\\"}\"\n                }\n            ]\n        }\n    ) {\n        partIds\n    }\n}",
+						"variables": ""
+					}
+				},
+				"url": {
+					"raw": "https://api.xemelgo.com/graphql",
+					"protocol": "https",
+					"host": [
+						"api",
+						"xemelgo",
+						"com"
+					],
+					"path": [
+						"graphql"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "List Inventory Parts",
+			"request": {
+				"auth": {
+					"type": "noauth"
+				},
+				"method": "POST",
+				"header": [
+					{
+						"key": "Authorization",
+						"value": "{{token}}",
+						"type": "text"
+					}
+				],
+				"body": {
+					"mode": "graphql",
+					"graphql": {
+						"query": "query inventoryParts ($filter: String, $nextToken: String) {\n  inventoryParts(input: { filter: $filter, nextToken: $nextToken }) {\n    inventoryParts {\n      id\n      number\n      name\n      description\n      unit\n      quantity\n    }\n    nextToken\n  }\n}",
+						"variables": "{\n    \"filter\": \"id in (\\\"FR557\\\", \\\"TB655\\\")\"\n}"
+					}
+				},
+				"url": {
+					"raw": "https://api.xemelgo.com/graphql",
+					"protocol": "https",
+					"host": [
+						"api",
+						"xemelgo",
+						"com"
+					],
+					"path": [
+						"graphql"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "Create Inventory",
+			"request": {
+				"auth": {
+					"type": "noauth"
+				},
+				"method": "POST",
+				"header": [
+					{
+						"key": "Authorization",
+						"value": "{{token}}",
+						"type": "text"
+					}
+				],
+				"body": {
+					"mode": "graphql",
+					"graphql": {
+						"query": "mutation {\n    createItemSet(\n        input: [\n            {\n                tracker_serial: \"E2801191A503006903FFC904\"\n                item_number: \"FL7M-10K6WE-910Z\"\n            },\n            {\n                tracker_serial: \"E2801191A503006903FFC9A4\"\n                item_number: \"FL7M-10J6W-CN03\"\n            },\n            {\n                tracker_serial: \"E2801191A503006903FFC994\"\n                item_number: \"FL7M-10J6W-CN03\"\n            },\n            {\n                tracker_serial: \"E2801191A503006903FFC9E4\"\n                item_number: \"FL7M-15Y6W-910\"\n            },\n            {\n                tracker_serial: \"E2801191A503006903FFC9D4\"\n                item_number: \"FL7M-15Y6W-910\"\n            }\n        ]\n    ) {\n        tracker_serials\n    }\n}",
+						"variables": ""
+					}
+				},
+				"url": {
+					"raw": "https://api.xemelgo.com/graphql",
+					"protocol": "https",
+					"host": [
+						"api",
+						"xemelgo",
+						"com"
+					],
+					"path": [
+						"graphql"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "List Inventory",
+			"request": {
+				"auth": {
+					"type": "noauth"
+				},
+				"method": "POST",
+				"header": [
+					{
+						"key": "Authorization",
+						"value": "{{token}}",
+						"type": "text"
+					}
+				],
+				"body": {
+					"mode": "graphql",
+					"graphql": {
+						"query": "query inventory ($filter: String, $nextToken: String) {\n  inventory(input: { filter: $filter, nextToken: $nextToken }) {\n    inventory {\n      id\n      name\n      description\n      part {\n        id\n        name\n      }\n      trackerSerial\n      lastUpdatedDate\n      creationDate\n      state\n      isConsumed\n      consumedDate\n    }\n    nextToken\n  }\n}",
+						"variables": "{\n    \"filter\": \"state==\\\"removed\\\" and lastUpdatedDate >= 1736535539743\"\n}"
+					}
+				},
+				"url": {
+					"raw": "https://api.xemelgo.com/graphql",
+					"protocol": "https",
+					"host": [
+						"api",
+						"xemelgo",
+						"com"
+					],
+					"path": [
+						"graphql"
+					]
+				}
+			},
+			"response": []
+		}
+	]
+}
+```
+---
+
 ## <span style={{ color: '#004FDB' }}>Errors</span>
 
 | Error                  | Code | Description                     |
 |------------------------|------|---------------------------------|
 | Expired token         | 401  | Unauthorized                   |
 | Invalid token         | 401  | Unauthorized                   |
-| Missing Auth Header   | 401  | Unauthorized                   |
+| Missing Authorization Header   | 401  | Unauthorized                   |
 | Duplicate Part IDs    | 400  | Part IDs must be unique        |
+| Invalid String or JSON | 400 | Malformed request |
+| Missing required `fileContent` field | 400 | Required field missing |
 | Inventory Part Exists | 409  | Inventory part already exists  |
 
+### Example Error Responses
+#### Expired Token:
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "Token has expired."
+    }
+  ]
+}
+```
 
+#### Invalid Token:
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "Unable to parse JWT token."
+    }
+  ]
+}
+```
 
+#### Missing Required Field (`fileContent`)
+```json
+{
+  "data": null,
+  "errors": [
+    {
+      "message": "Validation error: Missing required field 'fileContent'."
+    }
+  ]
+}
+```
+
+---
