--- a/docs/api/Work-In-Process/v1.1.md
+++ b/docs/api/Work-In-Process/v1.1.md
@@ -4,9 +4,9 @@ pagination_next: null
 pagination_prev: null
 ---
 
-<h1 style={{ color: '#004FDB' }}>Work Orders API</h1>
+<h1 style={{ color: '#004FDB' }}>Work Order API</h1>
 
-<h2>Version 1.3 — February 2024</h2>
+<h2>Version 1.4 — March 2025</h2>
 
 ---
 
@@ -18,7 +18,7 @@ pagination_prev: null
 | 1.1     | Updated branding                | Connie Wong   | 05/31/2023   |
 | 1.2     | Updated properties for Work Orders | Renuka Agrawal | 09/28/2023   |
 | 1.3     | Update Work Order & Attach Tracker APIs | Renuka Agrawal | 02/04/2024   |
-
+| 1.4     |List Work Orders and work order counts at a location API | Renuka Agrawal | 03/17/2025 |
 ---
 
 ## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
@@ -174,6 +174,356 @@ mutation {
     "attachWorkOrderTracker": {
       "workOrderNumber": "WO12345",
       "trackerSerial": "EPC12345"
+    }
+  }
+}
+```
+
+---
+
+## <span style={{ color: '#004FDB' }}>List Work Orders API</span>
+
+List Work Orders API allows to retrieve all the work orders and view their statuses. It also allows to filter the list of work orders based on different properties.
+
+### Endpoint Details
+
+- **URL:** `https://api.xemelgo.com/graphql`
+- **Method:** `POST`
+
+### Input Properties
+
+| Property   | Type   | Description                      | Required |
+|------------|--------|----------------------------------|----------|
+| `filter`     | String | Filter for work order properties | No       |
+| `nextToken`  | String | Pagination support               | No       |
+
+### Response Properties
+
+| Property   | Type   | Description              | Required |
+|------------|--------|--------------------------|----------|
+| `number`     | String | Work order number        | Yes      |
+| `description`| String | Work order description   | No       |
+| `trackerSerial`                | String        | EPC for the work order                                       | No       |
+| `startDate`                    | AWSTimestamp  | Start date of the work order                                 | No       |
+| `CompletionDate`               | AWSTimestamp  | Completion date of the work order                           | No       |
+| `dueDate`                      | AWSTimestamp  | Any other applicable due date for the work order            | No       |
+| `comments`                     | String        | Any remarks for the work orders                             | No       |
+| `customProperties`             | AWSJSON       | Additional properties applicable to work orders             | No       |
+| `inputs`                       | Array [Object]| Input part as an input to work order                        | No       |
+| `outputs`                      | Array [Object]| Output part produced                                        | No       |
+| `lastDetectedAtLocation`       | Object        | Location at which the work order was last seen at *(view table below)* | No       |
+| `lastDetectedAtLocationEntryDate` | AWSTimestamp  | Timestamp at which work order entered the location         | No       |
+| `trackerSerialAttachDate`      | AWSTimestamp  | Timestamp at which tag was attached to the work order       | No       |
+
+<h3>lastDetectedAtLocation</h3>
+
+| Property | Type   | Description         | Required |
+|----------|--------|---------------------|----------|
+| `id`       | String | Location identifier | Yes      |
+| `name`     | String | Location Name       | No       |
+
+<h3>inputs/outputs</h3>
+
+| Property      | Type   | Description                 | Required |
+|--------------|--------|-----------------------------|----------|
+| `id`           | String | Part Identifier             | Yes      |
+| `name`         | String | Part Name                   | No       |
+| `trackerSerial`| String | EPC for the part            | No       |
+| `part`         | Object | Part Type *(view details below)* | No       |
+| `shipmentState`| String | Shipment status of the part | No       |
+
+<h3>part</h3>
+
+| Property | Type   | Description            | Required |
+|----------|--------|------------------------|----------|
+| `id`       | String | Part type identifier   | Yes      |
+| `number`   | String | Part type number       | No       |
+| `name`          | String  | Part type name                                  | No       |
+| `description`   | String  | Part type description                           | No       |
+| `customProperties` | AWSJSON | Additional properties applicable to the work order | No       |
+
+<h3>Headers</h3>
+
+**Authorization –** `$idToken`
+
+### Request Body
+
+```graphql
+query workOrders($filter: String, $nextToken: String) {
+  workOrders(input: {filter: $filter, nextToken: $nextToken}) {
+    nextToken
+    workOrders{
+      number
+      trackerSerial
+      startDate
+      completionDate
+      dueDate
+      comments
+      description
+      lastUpdatedDate
+      lastDetectedAtLocation {
+        id
+        name
+      }
+      lastDetectedAtLocationEntryDate
+      trackerSerialAttachDate
+      State
+      customProperties
+      inputs{
+        id
+        number
+        name
+        description
+        customProperties
+      }
+    }
+  }
+}
+```
+
+**StatusCode** - 200
+
+### Response Body
+
+```json
+{
+  "data": {
+    "workOrders": {
+      "nextToken": null,
+      "workOrders": [
+        {
+          "number": "Work Order 01",
+          "lastUpdatedDate": 1712126425177,
+          "lastDetectedAtLocation": {
+            "id": "Shop Floor",
+            "name": "Shop Floor"
+          },
+          "trackerSerial": "E280689400005013D8128491",
+          "inputs": {
+            "name": "JN01-Part1",
+            "id": "JN01-Part1"
+          }
+        },
+        {
+          "id": "Work Order 02",
+          "lastUpdatedDate": 1712215816754,
+          "lastDetectedAtLocation": {
+            "id": "MULTIS",
+            "name": "MULTIS"
+          },
+          "trackerSerial": "E280689400005013D8127891",
+          "inputs": {
+            "name": "JN02-Part1",
+            "id": "JN02-Part1"
+          }
+        }
+      ]
+    }
+  }
+}
+```
+### Errors
+
+| Error                         | Error Code | Exception    |
+|--------------------------------|------------|-------------|
+| Expired token                 | 401        | Unauthorized |
+| Invalid token                 | 401        | Unauthorized |
+| Missing Authorization Header   | 401        | Unauthorized |
+
+---
+
+## <span style={{ color: '#004FDB' }}>List Work Order Counts At Locations API</span>
+
+List counts of Work Orders at a location API allows to retrieve the counts of work order by different status at the locations. List can be retrieved for any or all locations.
+
+### Endpoint Details
+
+- **URL:** `https://api.xemelgo.com/graphql`
+- **Method:** `POST`
+
+### Input Properties
+
+| Property   | Type   | Description              | Required |
+|------------|--------|--------------------------|----------|
+| `filter`     | String | Filter for any properties | No       |
+| `nextToken`  | String | Pagination support       | No       |
+
+### Response Properties
+
+| Property   | Type           | Description                                               | Required |
+|------------|---------------|-----------------------------------------------------------|----------|
+| `workOrders` | Array [Object] | List of count of work orders by location *(view table below)* | Yes      |
+| `nextToken`  | String         | Next token to retrieve the next page                     | No       |
+
+<h3>workOrders</h3>
+
+| Property              | Type   | Description                                                         | Required |
+|----------------------|--------|---------------------------------------------------------------------|----------|
+| `totalCount`          | Number | Total number of work orders at the location                         | No       |
+| `expeditedCount`      | Number | Count of expedited work orders at the location                      | No       |
+| `startCount`         | Number | Count of work orders that are in started state at the location      | No       |
+| `operationStartedCount` | Number | Count of work orders for which operation has started at the location | No       |
+| `timeExceeded`      | Object | Count of work orders that have exceeded the time threshold at the location *(view table below)* | No       |
+| `location`          | Object | Location details *(view table below)*                               | No       |
+
+<h3>timeExceeded</h3>
+
+| Property               | Type   | Description                                              | Required |
+|------------------------|--------|----------------------------------------------------------|----------|
+| `warningCount`          | Number | Count of work orders that exceeded warning threshold    | Yes      |
+| `criticalCount`         | Number | Count of work orders that exceeded critical threshold   | No       |
+| `expeditedWarningCount` | Number | Count of expedited work orders that exceeded warning threshold | No       |
+| `expeditedCriticalCount` | Number | Count of expedited work orders that exceeded critical threshold | No       |
+
+<h3>location</h3>
+
+| Property | Type   | Description         | Required |
+|----------|--------|---------------------|----------|
+| `id`       | String | Location identifier | Yes      |
+| `name`     | String | Location Name       | No       |
+
+<h3>Headers</h3>
+
+**Authorization –** `$idToken`
+
+### Request Body
+
+```graphql
+query workOrderLocationMetrics($filter: String, $nextToken: String) {
+  workOrderLocationMetrics (input: {filter: $filter, nextToken: $nextToken})
+  {
+    nextToken
+    workOrders {
+      totalCount
+      expeditedCount
+      startedCount
+      operationStartedCount
+      timeExceeded {
+        warningCount
+        criticalCount
+        expeditedWarningCount
+        expeditedCriticalCount
+      }
+      location {
+        id
+        name
+      }
+    }
+  }
+}
+```
+
+<h3>Filter Input Example</h3>
+
+```json
+{
+  "filter": "location.name == \"Location A\""
+}
+```
+
+**StatusCode** - 200
+
+### Errors
+
+| Error                         | Error Code | Exception    |
+|--------------------------------|------------|-------------|
+| Expired token                 | 401        | Unauthorized |
+| Invalid token                 | 401        | Unauthorized |
+| Missing Authorization Header   | 401        | Unauthorized |
+
+## <span style={{ color: '#004FDB' }}>Get Work Order Route API</span>
+
+Retrieves all work orders, their statuses, and allows filtering by properties.
+
+### Endpoint Details
+- **URL:** `https://api.xemelgo.com/graphql`
+- **Method:** `POST`
+
+### Request Headers
+```http
+Authorization: Bearer {IdToken}
+```
+
+### Input Properties
+
+| Property  | Type        | Description                         | Required |
+|-----------|------------|-------------------------------------|----------|
+| `number`    | String     | Work order number                   | Yes      |
+| `startDate` | AWSTimestamp | Start date for route               | No       |
+| `endDate`   | AWSTimestamp | End date for route                 | No       |
+
+### Response Properties
+
+| Property  | Type        | Description                                    | Required |
+|-----------|------------|------------------------------------------------|----------|
+| `state`    | String     | Current state of Work Order at location       | No       |
+| `startDate` | AWSTimestamp | First detection timestamp at location        | No       |
+| `endDate`   | AWSTimestamp | Last detection timestamp at location         | No       |
+| `location`  | Object     | Location where work order was last seen       | No       |
+| `duration`  | Number     | Time spent at that location                   | No       |
+
+### Location Properties
+
+| Property | Type   | Description               | Required |
+|----------|--------|---------------------------|----------|
+| `id`       | String | Location identifier       | Yes      |
+| `name`     | String | Location name             | No       |
+
+---
+
+### Request Body Example
+```graphql
+query workOrderRoute ($number: String!, $startDate: AWSTimestamp, $endDate: AWSTimestamp, $nextToken: String) {
+  workOrderRoute(input: { number: $number, startDate: $startDate, endDate: $endDate, nextToken: $nextToken }) {
+     nextToken
+     route {
+      location {
+        id
+        name
+      },
+      state,
+      startDate,
+      endDate,
+      duration
+    }
+  }
+}
+```
+
+### Example Input
+```json
+{
+  "number": "WO12345",
+  "startDate": 1719730800000,
+  "endDate": 1719903600000
+}
+```
+
+### Example Response
+```json
+{
+  "data": {
+    "workOrderRoute": {
+      "route": [
+        {
+          "location": { "id": "Paint", "name": "Paint" },
+          "startDate": 1719864278922,
+          "endDate": 1719864496290,
+          "duration": 217368
+        },
+        {
+          "location": { "id": "Fabrication", "name": "Fabrication" },
+          "startDate": 1719864496290,
+          "endDate": 1719864827571,
+          "duration": 331281
+        },
+        {
+          "location": { "id": "Quality", "name": "Quality" },
+          "startDate": 1719864827571,
+          "endDate": 1719866988210,
+          "duration": 2160639
+        }
+      ]
     }
   }
 }
