Get rid of versions

--- a/docs/api/Inventory/v1.1.md
+++ b/docs/api/Inventory/v1.1.md
@@ -4,27 +4,11 @@ pagination_next: null
 pagination_prev: null
 ---
 
-<h1 style={{ color: '#004FDB' }}>Inventory Management API</h1>
+<h1 style={{ color: '#0D8CFF' }}>Inventory Management API</h1>
 
 <h2>Version 1.6 — January 2025</h2>
 
----
-
-## <span style={{ color: '#004FDB' }}>Release Versions</span>
-
-| Version | Description                             | Author           | Release Date |
-|---------|-----------------------------------------|------------------|--------------|
-| 1.0     | Login and Create APIs for Inventory   | Renuka Agrawal   | 09/28/2023   |
-| 1.1     | Updated branding                      | George Gu        | 11/06/2023   |
-| 1.2     | Create and Update Inventory Parts API | Jeffrey Lin      | 01/02/2024   |
-| 1.3     | Updated branding                      | George Gu        | 03/20/2024   |
-| 1.4     | Updated Create ItemSet Payload        | Francis Wu       | 11/11/2024   |
-| 1.5     | Added List Inventory Parts API        | Sean Kim         | 12/13/2024   |
-| 1.6     | Cycle count integration               | Renuka Agrawal   | 01/13/2025   |
-
----
-
-## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
+## <span style={{ color: '#0D8CFF' }}>Authentication - Login API</span>
 
 To access the GraphQL APIs, users must first authenticate using the Xemelgo Login REST API.
 
@@ -55,7 +39,333 @@ Use the `$idToken` as the authorization header for all API requests.
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Create Item Set API</span>
+## <span style={{ color: '#0D8CFF' }}>Create Inventory API</span>
+
+Create Inventory API allows to create multiple inventory items at the same time and associate the items to the respective RFID tracker serial number. 
+
+### Graph API
+- **URL:** `https://api.xemelgo.com/graphql`
+- **Method:** `POST`
+
+### Properties
+
+| Property         | Type                        | Description                                                                                   | Required |
+|------------------|-----------------------------|-----------------------------------------------------------------------------------------------|----------|
+| `id`               | String                      | Serial number of the item. Can be same as the RFID tag number in case the items are not serialized | Yes      |
+| `partId`           | String                      | SKU/product/UPC number representing the type of the product                                   | Yes      |
+| `trackerSerial`    | String                      | RFID tag number for the item                                                                  | No       |
+| `description`      | String                      | Description if any for the item                                                               | No       |
+| `name`             | String                      | Name of the item                                                                              | No       |
+| `lotNumber`        | String                      | Lot number of the lot the item is a part of                                                   | No       |
+| `expirationDate`   | AWSTimestamp in milliseconds| Date to define the expiration date for an item                                                | No       |
+| `locationId`       | String                      | Location of the item, that the item currently is being added to                               | No       |
+| `customProperties` | AWSJSON                     | Additional properties that a customer may want to specify for the item                        | No       |
+
+<h3>Headers</h3>
+
+**Authorization –** `$idToken`
+
+### Request Body
+
+Input can consist of multiple JSON objects of unique items.
+
+```graphql
+mutation {
+  createInventory(input: {
+    inventory: [
+      {
+        id: "item 1",
+        partId: "SKU 1",
+        trackerSerial: "12345679",
+        comments: "This is testing payload",
+        locationId: "Warehouse",
+        customProperties: "{\"thickness\": \"7/1\", \"width\": \"2-3/4\", \"length\": \"41.75\", \"quantity\": 286, \"po_number\": 123453}"
+      }
+    ]
+  }) {
+    inventoryIds
+  }
+}
+```
+
+**StatusCode** - 200
+
+### Response Body
+
+```json
+{
+  "data": {
+    "createInventory": {
+      "inventoryIds": [
+        "item 1"
+      ]
+    }
+  }
+}
+```
+
+Response consists of a list of all inventory items that were created
+
+### Errors
+
+| Error                        | Error code | Exception     |
+|-----------------------------|------------|---------------|
+| `Expired token`               | 401        | Unauthorized  |
+| `Invalid token`               | 401        | Unauthorized  |
+| `Missing Authorization Header`| 401        | Unauthorized  |
+
+### Error Response Examples
+
+#### Expired Token
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "Token has expired."
+    }
+  ]
+}
+```
+
+#### Invalid token
+
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "Unable to parse JWT token"
+    }
+  ]
+}
+```
+
+#### Missing Authorization Header
+
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "User is not authorized to make this call."
+    }
+  ]
+}
+```
+
+### Additional Error Messages
+
+| Error                                  | Error code |
+|----------------------------------------|------------|
+| Duplicate trackerSerial in payload     | 200        |
+| TrackerSerial already exists           | 200        |
+| Item with same serial id already exist | 200        |
+
+#### TrackerSerial in Payload
+
+```json
+{
+  "data": {
+    "createInventory": {
+      "inventoryIds": []
+    }
+  },
+  "errors": [
+    {
+      "path": ["createInventory"],
+      "data": null,
+      "errorType": "ResourceAlreadyExistError",
+      "errorInfo": null,
+      "message": "Item '1234' has tracker serial '12345679' that already exists. Use 'reuseTrackerSerial' if you want to reuse this tracker serial."
+    }
+  ]
+}
+```
+
+#### Item with Same ID Already Exists
+
+```json
+{
+  "data": {
+    "createInventory": {
+      "inventoryIds": []
+    }
+  },
+  "errors": [
+    {
+      "path": ["createInventory"],
+      "data": null,
+      "errorType": "PayloadValidationError",
+      "errorInfo": null,
+      "message": "Duplicate value [item1] found in the 'id' property. Please make sure each item has a unique id."
+    }
+  ]
+}
+```
+
+#### Duplicate TrackerSerial in Payload
+
+```json
+{
+  "data": {
+    "createInventory": {
+      "inventoryIds": []
+    }
+  },
+  "errors": [
+    {
+      "path": ["createInventory"],
+      "data": null,
+      "errorType": "PayloadValidationError",
+      "errorInfo": null,
+      "message": "Duplicate value [12345679] found in the 'trackerSerial' property. Please make sure each item has a unique trackerSerial."
+    }
+  ]
+}
+```
+
+---
+
+## <span style={{ color: '#0D8CFF' }}>Update Inventory API</span>
+
+Update Inventory API allows to update different properties of the inventory items including updating the trackerSerial, item id or other properties.  
+
+### Graph API
+- **URL:** `https://api.xemelgo.com/graphql`
+- **Method:** `POST`
+
+### Properties
+
+| Property         | Type                            | Description                                                                                   | Required |
+|------------------|----------------------------------|-----------------------------------------------------------------------------------------------|----------|
+| `id`               | String                           | Serial number of the item. Can be same as the RFID tag number in case the items are not serialized | Yes      |
+| `partId`           | String                           | SKU/product/UPC number representing the type of the product                                   | No       |
+| `trackerSerial`    | String                           | RFID tag number for the item                                                                  | No       |
+| `description`      | String                           | Description if any for the item                                                               | No       |
+| `name`             | String                           | Name of the item                                                                              | No       |
+| `lotNumber`        | String                           | Lot number of the lot the item is a part of                                                   | No       |
+| `expirationDate`   | AWSTimestamp in milliseconds     | Date to define the expiration date for an item                                                | No       |
+| `locationId`       | String                           | Location of the item, that the item currently is being added to                               | No       |
+| `customProperties` | AWSJSON                          | Additional properties that a customer may want to specify for the item                        | No       |
+
+<h3>Headers</h3>
+
+**Authorization –** `$idToken`
+
+### Request Body
+
+Input can consist of multiple JSON objects of unique items.
+
+```graphql
+mutation {
+  updateInventory(input: {
+    inventory: [
+      {
+        id: "item 1",
+        updates: {
+          trackerSerial: "98765432",
+          comments: "This is an updated payload",
+          locationId: "Warehouse",
+          customProperties: "{\"thickness\": \"7/1\", \"width\": \"2-3/4\", \"length\": \"41.75\", \"quantity\": 286, \"po_number\": 12345}"
+        }
+      }
+    ]
+  }) {
+    inventory {
+      id
+      part {
+        id
+      }
+      trackerSerial
+      customProperties
+    }
+  }
+}
+```
+**StatusCode** - 200
+
+### Response Body
+
+```json
+{
+  "data": {
+    "updateInventory": {
+      "inventory": [
+        {
+          "id": "item 1",
+          "part": {
+            "id": "SKU 1"
+          },
+          "trackerSerial": "98765432",
+          "customProperties": "{\"species\":\"HW\",\"received_date\":1744779990000,\"grade\":\"grade\",\"width\":\"2-3/4\",\"thickness\":\"7/1\",\"length\":\"41.75\",\"quantity\":300,\"vendor\":\"Easter foreign products\",\"po_number\":12345}"
+        }
+      ]
+    }
+  }
+}
+```
+
+Response consists of a list of updated inventory items with updated properties.
+
+### Errors
+
+| Error                        | Error code | Exception     |
+|-----------------------------|------------|---------------|
+| Expired token               | 401        | Unauthorized  |
+| Invalid token               | 401        | Unauthorized  |
+| Missing Authorization Header| 401        | Unauthorized  |
+
+#### For Expired Token
+
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "Token has expired."
+    }
+  ]
+}
+```
+
+#### For Invalid Token
+
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "Unable to parse JWT token"
+    }
+  ]
+}
+```
+
+#### Missing Authorization Header
+
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "User is not authorized to make this call."
+    }
+  ]
+}
+```
+
+### Additional 200-Level Errors
+
+| Error                                   | Error code |
+|----------------------------------------|------------|
+| Duplicate `trackerSerial` in payload   | 200        |
+| `trackerSerial` already exists         | 200        |
+| Item with same serial `id` already exists | 200     |
+
+---
+
+## <span style={{ color: '#0D8CFF' }}>Create Item Set API</span>
 
 ### Endpoint Details
 - **URL:** `https://api.xemelgo.com/graphql`
@@ -81,9 +391,10 @@ mutation {
 }
 ```
 
+
 ---
 
-## <span style={{ color: '#004FDB' }}>Create Inventory Item Types API</span>
+## <span style={{ color: '#0D8CFF' }}>Create Inventory Item Types API</span>
 
 ### Request Body
 ```graphql
@@ -108,7 +419,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Update Inventory Item Types API</span>
+## <span style={{ color: '#0D8CFF' }}>Update Inventory Item Types API</span>
 
 ### Request Body
 ```graphql
@@ -130,7 +441,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Get Inventory Items API</span>
+## <span style={{ color: '#0D8CFF' }}>Get Inventory Items API</span>
 
 ### Request Body
 ```graphql
@@ -151,7 +462,7 @@ query {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>List Inventory Item Type Counts API</span>
+## <span style={{ color: '#0D8CFF' }}>List Inventory Item Type Counts API</span>
 
 ### Request Body
 ```graphql
@@ -170,7 +481,7 @@ query inventoryPartLocationMetrics ($filter: String, $nextToken: String) {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Cycle Count Event</span>
+## <span style={{ color: '#0D8CFF' }}>Cycle Count Event</span>
 
 The cycle count event payload contains a list of SKUs and their on-hand and missing counts.
 
@@ -194,7 +505,7 @@ The cycle count event payload contains a list of SKUs and their on-hand and miss
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Upload CSV API</span>
+## <span style={{ color: '#0D8CFF' }}>Upload CSV API</span>
 
 The Upload CSV API allows uploading CSV files to be processed by Xemelgo to:
 
@@ -292,7 +603,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Inventory Management Postman Collection</span>
+## <span style={{ color: '#0D8CFF' }}>Inventory Management Postman Collection</span>
 
 ```json
 {
@@ -555,7 +866,7 @@ mutation {
 ```
 ---
 
-## <span style={{ color: '#004FDB' }}>Errors</span>
+## <span style={{ color: '#0D8CFF' }}>Errors</span>
 
 | Error                  | Code | Description                     |
 |------------------------|------|---------------------------------|
