--- a/docs/api/Inventory/v1.4.md
+++ b/docs/api/Inventory/v1.4.md
@@ -4,13 +4,13 @@ pagination_next: null
 pagination_prev: null
 ---
 
-<h1 style={{ color: '#004FDB' }}>Inventory API</h1>
+<h1 style={{ color: '#0D8CFF' }}>Inventory API</h1>
 
 <h2>Version 1.4 — November 2024</h2>
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Release Versions</span>
+## <span style={{ color: '#0D8CFF' }}>Release Versions</span>
 
 | Version | Description                            | Author           | Release Date |
 |---------|----------------------------------------|------------------|--------------|
@@ -22,7 +22,7 @@ pagination_prev: null
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
+## <span style={{ color: '#0D8CFF' }}>Authentication - Login API</span>
 
 To access the GraphQL APIs, users must first authenticate using the Xemelgo Login REST API.
 
@@ -53,7 +53,7 @@ Use the `$idToken` as the authorization header for all API requests.
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Create Item Set API</span>
+## <span style={{ color: '#0D8CFF' }}>Create Item Set API</span>
 
 ### Endpoint Details
 - **URL:** `https://api.xemelgo.com/graphql`
@@ -81,7 +81,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Create Inventory Parts API</span>
+## <span style={{ color: '#0D8CFF' }}>Create Inventory Parts API</span>
 
 ### Request Body
 ```graphql
@@ -106,7 +106,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Update Inventory Parts API</span>
+## <span style={{ color: '#0D8CFF' }}>Update Inventory Parts API</span>
 
 ### Request Body
 ```graphql
@@ -128,7 +128,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Get Inventory Items API</span>
+## <span style={{ color: '#0D8CFF' }}>Get Inventory Items API</span>
 
 ### Request Body
 ```graphql
@@ -149,7 +149,7 @@ query {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Errors</span>
+## <span style={{ color: '#0D8CFF' }}>Errors</span>
 
 | Error                  | Code | Description                     |
 |------------------------|------|---------------------------------|
