--- a/docs/api/Asset/v1.1.md
+++ b/docs/api/Asset/v1.1.md
@@ -4,13 +4,13 @@ pagination_next: null
 pagination_prev: null
 ---
 
-<h1 style={{ color: '#004FDB' }}>Asset Route API</h1>
+<h1 style={{ color: '#0D8CFF' }}>Asset Route API</h1>
 
 <h2>Version 1.1 — August 2024</h2>
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Release Versions</span>
+## <span style={{ color: '#0D8CFF' }}>Release Versions</span>
 
 | Version | Description            | Author          | Release Date |
 |---------|------------------------|----------------|--------------|
@@ -18,7 +18,7 @@ pagination_prev: null
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
+## <span style={{ color: '#0D8CFF' }}>Authentication - Login API</span>
 
 To access the GraphQL APIs, users must first authenticate using the Xemelgo Login REST API.
 
@@ -49,7 +49,7 @@ Use the `IdToken` as the authorization header for all API requests.
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Get Asset Route API</span>
+## <span style={{ color: '#0D8CFF' }}>Get Asset Route API</span>
 
 The Get Asset Route API retrieves asset details and status updates.
 
@@ -110,7 +110,7 @@ query assetRoute($id: String!, $startDate: AWSTimestamp, $endDate: AWSTimestamp)
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Errors</span>
+## <span style={{ color: '#0D8CFF' }}>Errors</span>
 
 | Error                   | Code | Description         |
 |-------------------------|------|---------------------|
