--- a/docs/api/Work-In-Process/v1.1.md
+++ b/docs/api/Work-In-Process/v1.1.md
@@ -4,24 +4,11 @@ pagination_next: null
 pagination_prev: null
 ---
 
-<h1 style={{ color: '#004FDB' }}>Work Order API</h1>
+<h1 style={{ color: '#0D8CFF' }}>Work Order API</h1>
 
 <h2>Version 1.4 — March 2025</h2>
 
----
-
-## <span style={{ color: '#004FDB' }}>Release Versions</span>
-
-| Version | Description                      | Author          | Release Date |
-|---------|----------------------------------|----------------|--------------|
-| 1.0     | Login and Create APIs for Work Orders | Francis Wu    | 02/17/2022   |
-| 1.1     | Updated branding                | Connie Wong   | 05/31/2023   |
-| 1.2     | Updated properties for Work Orders | Renuka Agrawal | 09/28/2023   |
-| 1.3     | Update Work Order & Attach Tracker APIs | Renuka Agrawal | 02/04/2024   |
-| 1.4     |List Work Orders and work order counts at a location API | Renuka Agrawal | 03/17/2025 |
----
-
-## <span style={{ color: '#004FDB' }}>Authentication - Login API</span>
+## <span style={{ color: '#0D8CFF' }}>Authentication - Login API</span>
 
 To access the GraphQL APIs, users must first authenticate using the Xemelgo Login REST API.
 
@@ -52,7 +39,7 @@ Use the `$idToken` as the authorization header for all API requests.
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Create Work Order Set API</span>
+## <span style={{ color: '#0D8CFF' }}>Create Work Order Set API</span>
 
 Creates multiple work orders and associates them with RFID tracker serial numbers.
 
@@ -94,7 +81,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Update Work Order Properties API</span>
+## <span style={{ color: '#0D8CFF' }}>Update Work Order Properties API</span>
 
 Allows bulk updates of work order properties such as status, due dates, and priority.
 
@@ -146,7 +133,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Attach Work Order Tracker API</span>
+## <span style={{ color: '#0D8CFF' }}>Attach Work Order Tracker API</span>
 
 Associates an RFID tracker serial number with a work order.
 
@@ -181,7 +168,7 @@ mutation {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>List Work Orders API</span>
+## <span style={{ color: '#0D8CFF' }}>List Work Orders API</span>
 
 List Work Orders API allows to retrieve all the work orders and view their statuses. It also allows to filter the list of work orders based on different properties.
 
@@ -332,7 +319,7 @@ query workOrders($filter: String, $nextToken: String) {
 
 ---
 
-## <span style={{ color: '#004FDB' }}>List Work Order Counts At Locations API</span>
+## <span style={{ color: '#0D8CFF' }}>List Work Order Counts At Locations API</span>
 
 List counts of Work Orders at a location API allows to retrieve the counts of work order by different status at the locations. List can be retrieved for any or all locations.
 
@@ -431,7 +418,7 @@ query workOrderLocationMetrics($filter: String, $nextToken: String) {
 | Invalid token                 | 401        | Unauthorized |
 | Missing Authorization Header   | 401        | Unauthorized |
 
-## <span style={{ color: '#004FDB' }}>Get Work Order Route API</span>
+## <span style={{ color: '#0D8CFF' }}>Get Work Order Route API</span>
 
 Retrieves all work orders, their statuses, and allows filtering by properties.
 
@@ -531,7 +518,7 @@ query workOrderRoute ($number: String!, $startDate: AWSTimestamp, $endDate: AWST
 
 ---
 
-## <span style={{ color: '#004FDB' }}>Errors</span>
+## <span style={{ color: '#0D8CFF' }}>Errors</span>
 
 | Error                   | Code | Description         |
 |-------------------------|------|---------------------|
