add consume inventory API doc and delete tutorial files

--- a/docs/api/Inventory/v1.1.md
+++ b/docs/api/Inventory/v1.1.md
@@ -357,11 +357,109 @@ Response consists of a list of updated inventory items with updated properties.
 
 ### Additional 200-Level Errors
 
-| Error                                   | Error code |
-|----------------------------------------|------------|
-| Duplicate `trackerSerial` in payload   | 200        |
-| `trackerSerial` already exists         | 200        |
-| Item with same serial `id` already exists | 200     |
+| Error                                     | Error code |
+| ----------------------------------------- | ---------- |
+| Duplicate `trackerSerial` in payload      | 200        |
+| `trackerSerial` already exists            | 200        |
+| Item with same serial `id` already exists | 200        |
+
+---
+
+## <span style={{ color: '#0D8CFF' }}>Consume Inventory API</span>
+
+Consume Inventory API allows to mark multiple inventory items as consumed at the same time.
+
+### Graph API
+
+- **URL:** `https://api.xemelgo.com/graphql`
+- **Method:** `POST`
+
+### Properties
+
+| Property       | Type       | Description                                | Required |
+| -------------- | ---------- | ------------------------------------------ | -------- |
+| `inventoryIds` | [String!]! | Array of inventory item IDs to be consumed | Yes      |
+
+<h3>Headers</h3>
+
+**Authorization –** `$idToken`
+
+### Request Body
+
+Input consists of an array of inventory item IDs to be consumed.
+
+```graphql
+mutation {
+  consumeInventory(input: { inventoryIds: ["item 1", "item 2", "item 3"] }) {
+    inventoryIds
+  }
+}
+```
+
+**StatusCode** - 200
+
+### Response Body
+
+```json
+{
+  "data": {
+    "consumeInventory": {
+      "inventoryIds": ["item 1", "item 2", "item 3"]
+    }
+  }
+}
+```
+
+Response consists of a list of all inventory items that were consumed.
+
+### Errors
+
+| Error                          | Error code | Exception    |
+| ------------------------------ | ---------- | ------------ |
+| `Expired token`                | 401        | Unauthorized |
+| `Invalid token`                | 401        | Unauthorized |
+| `Missing Authorization Header` | 401        | Unauthorized |
+
+### Error Response Examples
+
+#### Expired Token
+
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "Token has expired."
+    }
+  ]
+}
+```
+
+#### Invalid token
+
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "Unable to parse JWT token"
+    }
+  ]
+}
+```
+
+#### Missing Authorization Header
+
+```json
+{
+  "errors": [
+    {
+      "errorType": "UnauthorizedException",
+      "message": "User is not authorized to make this call."
+    }
+  ]
+}
+```
 
 ---
 
